# legion

./: .gitignore
c++/: CMakeLists.txt
c++/cpp/: CMakeLists.txt  gpu_worker.cpp  master_sender.cpp
c++/cuda/: gpu_compute.cu  mat_mult.cu
go/: go.mod  main.go
go/actors/: client.go  exec.go
proj/Moin/: b.py  main.yaml
python/: build.py  exec_worker.py  gpu_server.py  gpu_worker.py  master_server.py  requirements.txt  setup.py
python/scripts/: exec_test.py
